--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -29,7 +29,7 @@ jobs:
         run: npx prettier --write .
 
       - name: Run ESLint (auto-fix)
-        run: npx eslint . --ext .ts,.tsx --fix
+        run: npx eslint src --ext .ts,.tsx --fix
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
