--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,4 +1,4 @@
-{
+ {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
@@ -6,6 +6,8 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "types": ["node"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
