--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,4 +16,4 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npm run test:run
-      - run: npm run coverage
+      - run: npm run test:coverage
