--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Commit changes to summary
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: 'Style: auto-fix with prettier and eslint'
+          commit_message: 'Tests: Update test coverage'
           commit_user_name: 'LangNav Bot'
           commit_user_email: 'noreply@github.com'
           skip_dirty_check: false
