--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-inlinesvg": "^4.2.0",
     "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
