--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,13 +3,19 @@
   "editor.formatOnSave": true,
   // --- Let ESLint run code actions on save ---
   "editor.codeActionsOnSave": {
+    "source.organizeImports": "explicit",
     "source.fixAll": "always", // run all fixers (includes prettier if wired)
-    "source.fixAll.eslint": "always" // explicitly run eslint --fix
+    "source.fixAll.eslint": "always", // run eslint --fix
   },
   // --- ESLint integration ---
   "eslint.enable": true,
   "eslint.run": "onType",
   "eslint.format.enable": true,
   "eslint.useFlatConfig": true,
-  "eslint.validate": ["typescript", "typescriptreact", "javascript", "javascriptreact"]
+  "eslint.validate": [
+    "typescript",
+    "typescriptreact",
+    "javascript",
+    "javascriptreact"
+  ],
 }
