Bugfix:Text input stop debouncing (#327)
People have reported problems using the text inputs -- this change seeks
to fix that but turning off the update-on-change interaction, now it
should only update when you submit a change or on blur. Additionally,
escape now undoes changes.

<img width="388" height="192" alt="Screenshot 2025-12-03 at 22 28 07"
src="https://github.com/user-attachments/assets/cd77744c-2680-4bff-9b6b-acc6f52dcb53"
/>

---------

Co-authored-by: conradarcturus <1616639+conradarcturus@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,9 @@
   "editor.formatOnSave": true,
   // --- Let ESLint run code actions on save ---
   "editor.codeActionsOnSave": {
+    "source.organizeImports": "explicit",
     "source.fixAll": "always", // run all fixers (includes prettier if wired)
-    "source.fixAll.eslint": "always" // explicitly run eslint --fix
+    "source.fixAll.eslint": "always" // run eslint --fix
   },
   // --- ESLint integration ---
   "eslint.enable": true,
