--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "singleQuote": true,
     "trailingComma": "all",
     "semi": true,
-    "printWidth": 100
+    "printWidth": 100,
+    "tabWidth": 2
   }
 }
