--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,14 @@
   "eslint.run": "onType",
   "eslint.format.enable": true,
   "eslint.useFlatConfig": true,
-  "eslint.validate": ["typescript", "typescriptreact", "javascript", "javascriptreact"]
+  "eslint.validate": [
+    "typescript",
+    "typescriptreact",
+    "javascript",
+    "javascriptreact"
+  ],
+  // Markdown automatic format disabled because it messes tables
+  "[markdown]": {
+    "editor.formatOnSave": false
+  }
 }
