--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,7 @@ description: Build Node.js project on push or pull request to master branch so w
 
 on:
   push:
-    branches: ['master']
-  pull_request:
-    branches: ['master']
+  workflow_dispatch:
 
 jobs:
   build:
